@@ -1,5 +1,6 @@
 Changes
 lib/Catalyst/Plugin/InflateMore.pm
+LICENSE
 Makefile.PL
 MANIFEST			This list of files
 META.yml
