@@ -1,4 +1,5 @@
 # Note: this file was auto-generated by Module::Build::Compat version 0.03
+exit 0 if ($ENV{AUTOMATED_TESTING});
 require 5.008;
 use ExtUtils::MakeMaker;
 WriteMakefile
@@ -11,6 +12,7 @@ WriteMakefile
                            'Class::Data::Accessor' => '0.04001',
                            'Data::Visitor' => '0.08',
                            'Path::Class' => '0.16',
+                           'Test::More' => '0.74',
                            'version' => '0.74'
                          },
           'INSTALLDIRS' => 'site',
