@@ -1,6 +1,12 @@
-2008-05-23  Peter Flanigan  <pjf@localhost>
+2008-06-02
 
-	* lib/Catalyst/Plugin/InflateMore.pm:
+	* Build.PL:
+
+	Made version a build requirement
+
+2008-05-23
+
+	* t/*pod*.t:
 
 	Added POD and POD coverage tests
 
